notebooks/transport/err__62_merge_stacks.txt
  File "62_merge_stacks.py", line 32
    parameter_frame[]
                    ^
SyntaxError: invalid syntax
